fix cart icon not showing and remove console logs

--- a/Aladdin/wwwroot/css/products.css
+++ b/Aladdin/wwwroot/css/products.css
@@ -1,11 +1,5 @@
-﻿.product {
-    border: hidden;
-}
-
-.price-input {
-    border:hidden;
-}
-
+﻿.product,
+.price-input,
 .select-box {
     border: hidden;
 }
